@@ -84,11 +84,6 @@ val module_declaration: scoping -> t -> module_declaration -> module_declaration
      apply (compose s1 s2) x = apply s2 (apply s1 x) *)
 val compose: t -> t -> t
 
-(* A forward reference to be filled in ctype.ml. *)
-val ctype_apply_env_empty:
-  (type_expr list -> type_expr -> type_expr list -> type_expr) ref
-
-
 module Lazy : sig
   type module_decl =
     {
